--- a/client/package.json
+++ b/client/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "proxy": "http://localhost:5000",
   "dependencies": {
+    "express": "^4.17.0",
     "axios": "^0.18.0",
     "moment": "^2.24.0",
     "react": "^16.8.6",
