--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "jest": "^24.7.1",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.5.9",
+    "prerender-node": "^3.2.4",
     "puppeteer": "^1.18.1",
     "redis": "^2.8.0",
     "request": "^2.88.0"
